# TictactoeCleaned-Project

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: ai.c.CD69A66192E3A7A7.idx  ai.h.489DCDAF6F41B9F8.idx  gameBoard.c.BC504694BF5668FF.idx  gameBoard.h.FDAFBE1DDC6A246A.idx  gameManager.c.D92A143095DB8155.idx  gameManager.h.2E9F663C6C5EB781.idx  main.c.4737047B01EBF5F6.idx  tictactoe_api.h.71012A0EF1367649.idx
.github/workflows/: release.yml
include/: ai.h  gameBoard.h  gameManager.h  tictactoe_api.h
src/: ai.c  gameBoard.c  gameManager.c  main.c
